Feat: implement the front-end data acquisition.